# DMANDATE

./: .gitignore  Anchor.toml  DEPLOYMENT.md  README.md  package-lock.json  package.json  workflow.md
backend/src/: config.ts
backend/src/types/: dmandate.ts
cli/: .gitignore  README.md  package-lock.json  package.json
cli/idl/: dmandate.json
programs/dmandate/: Cargo.toml
programs/dmandate/src/: lib.rs
