[package]
name = "dmandate"
version = "0.1.0"
description = "Solana-based decentralized mandate system - Created by DEEPANSHU for DMANDATE"
edition = "2021"
authors = ["DEEPANSHU"]

[lib]
crate-type = ["cdylib", "lib"]
name = "dmandate"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build","anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.30.1", features = ["init-if-needed"]}
anchor-spl = {version = "0.30.1", features = ["metadata"]}
